# MLA-motion-processing

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Python/ml_mla/: .gitignore  README.md  data_import.py  data_processing.py  data_visualization.py  main.py  tools.py
Python/ml_mla/algos/: affinity_propagation_algo.py  filtering.py  kmeans_algo.py  mean_shift_algo.py
Python/ml_mla/data_purification/: README.md  purify.py
Python/ml_mla/folder_cleaning/: README.md  clean_folder.py
Python/ml_mla/misc/: README.md  main.py  motion.py  unused_code.py
Python/ml_mla/motion_classes/: README.md  datatype.py  frame.py  joint.py  motion.py  test.py
Source/: CMakeLists.txt  MLA.h
Source/01_MLATools_lib/: CMakeLists.txt  MLACommonInclude.h  MLATools_lib.h
Source/01_MLATools_lib/MLAData/: MLAData.cpp  MLAData.h
Source/01_MLATools_lib/MLADataExport/: CSVExport.cpp  CSVExport.h  JsonExport.cpp  JsonExport.h  PipeExport.h
Source/01_MLATools_lib/MLAFilters/: MLAFilters.cpp  MLAFilters.h  MLASavgol.cpp  MLASavgol.h
Source/01_MLATools_lib/MLAGraph/: MLAGraph.h  MLAGraph.inl
Source/01_MLATools_lib/MLAMotionOperation/: MLAAccData.cpp  MLAAccData.h  MLAMotionOperation.cpp  MLAMotionOperation.h  MLASpeedData.cpp  MLASpeedData.h
Source/01_MLATools_lib/MLAShader/: MLAShader.cpp  MLAShader.h
Source/01_MLATools_lib/MLATree/: MLATree.h  MLATree.inl
Source/01_MLATools_lib/MLAUtility/: MLAUtility.cpp  MLAUtility.h  MLAUtility_impl.tcc
Source/02_MLAMotion_lib/: CMakeLists.txt  MLAMotion_lib.h
Source/02_MLAMotion_lib/MLAMotion/: MLAFrame.cpp  MLAFrame.h  MLAJoint.cpp  MLAJoint.h  MLAMotion.cpp  MLAMotion.h
Source/03_MLAParser_lib/: CMakeLists.txt  MLAParser_lib.h
Source/03_MLAParser_lib/MLABvhParser/: MLABvhParser.cpp  MLABvhParser.h
Source/04_MLAGui_lib/: CMakeLists.txt  MLAGui_lib.h
Source/04_MLAGui_lib/MLACamera/: MLACamera.cpp  MLACamera.h
Source/04_MLAGui_lib/MLAInput/: MLAInput.cpp  MLAInput.h
Source/04_MLAGui_lib/MLAMainWindow/: MLAMainWindow.cpp  MLAMainWindow.h
Source/05_MLANeuron_lib/: CMakeLists.txt  MLANeuron_lib.h
Source/05_MLANeuron_lib/MLANeuronConnection/: NeuronConnection.cpp  NeuronConnection.h
Source/06_MLARender/: CMakeLists.txt
Source/06_MLARender/MLARender/: FrameRender.cpp  FrameRender.h
Source/06_MLARender_lib/: CMakeLists.txt  MLARender_lib.h
Source/06_MLARender_lib/MLARender/: FrameRender.cpp  FrameRender.h
Source/MLA_app/: CMakeLists.txt  MLA_app.cpp
Source/MLA_compute/: CMakeLists.txt  MLA_compute.cpp
